--- a/src/Chat/styles.css
+++ b/src/Chat/styles.css
@@ -9,6 +9,26 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.message-container-loader{
+
+  padding:8px;
+  text-align: center;
+  width: 90%;
+  height: 70%;
+  background-color: rgb(242, 242, 252);
+  border-radius: 8px;
+  border: 1px solid black;
+  margin:10px auto;
+}
+
+.CircularProgress{
+  position: absolute !important;
+    top: 50% !important;
+    left: 49% !important;
+    right: 50% !important;
+  
+}
+
 .message-container{
     display:flex;
     flex-direction:column;
@@ -94,3 +114,8 @@
 }
 
 
+.heading-h2{
+  font-weight: 400;
+  margin-left: 30px;
+  margin-top: 10px;
+}
