--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -3,5 +3,36 @@
 }
 
 .header-div{
-    background-color: blue;
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+}
+
+.header-div > h2{
+    margin: 10px;
+    font-family: "Open Sans", serif;
+    color: rgb(219, 77, 11);
+}
+
+.header-div > h3{
+    margin: 10px;
+    font-family: "Open Sans", serif;
+    color: rgb(230, 13, 96);
+}
+
+.header-div > button{
+    cursor: pointer;
+    font-weight: 600;
+    margin: 10px;
+    background-color: rgb(0, 162, 255);
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 20px;
+    font-family: "Open Sans", serif;
+    color: #fff;
 }
