--- a/src/Users/styles.css
+++ b/src/Users/styles.css
@@ -2,14 +2,14 @@
     display:flex;
     margin:10px;
     /* background-color: DodgerBlue; */
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 
 .flexbox-container > div {
     border:1px solid grey;
     border-radius:10px;
-    width:150px;
-    height:50px;
+    width:250px;
+    height:100px;
     background-color: #ddb8da;
     margin: 10px;
     padding: 20px;
@@ -28,4 +28,38 @@
     font-size:15px;
     text-decoration:none;
    
+  }
+
+  .childDivImg{
+    float: left;
+    width: 40%;
+  }
+
+  .childDiv{
+    float: left;
+    width: 60%;
+  }
+
+  .childDiv > p{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size:15px;
+    color: #fff;
+    
+  }
+
+  .childDivImg img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+  }
+  .childDiv button{
+    background-color: blueviolet;
+    width: 60px;
+    font-weight:500 ;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    color: #fff;
   }
